Update description and title

--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@
       }
     }
 
+
+
   </style>
 
 </head>
@@ -334,11 +336,13 @@
       <div class="categories-flex">
         <a href="src/main/resources/pages/men.html"         class="category-item"><span>Men</span></a>
         <a href="src/main/resources/pages/women.html"       class="category-item"><span>Women</span></a>
+        <a href="src/main/resources/pages/brands.html"      class="category-item"><span>Brands</span></a>
         <a href="src/main/resources/pages/bundle.html"      class="category-item"><span>Bundle</span></a>
-        <a href="src/main/resources/pages/couple.html"      class="category-item"><span>Couple</span></a>
+<!--        <a href="src/main/resources/pages/couple.html"      class="category-item"><span>Couple</span></a>-->
         <a href="src/main/resources/pages/accessories.html" class="category-item"><span>Accessories</span></a>
         <a href="src/main/resources/pages/cases.html"      class="category-item"><span>Boxes</span></a>
-        <a href="src/main/resources/pages/luxury.html"      class="category-item"><span>Luxury</span></a>
+<!--        <a href="src/main/resources/pages/luxury.html"      class="category-item"><span>Luxury</span></a>-->
+
       </div>
     </div>
 
