--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -119,7 +119,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-1.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/1/M1-5.jpg" alt="Mens Watch">
-      <h4>CAITES</h4>
+      <h4>CAITES Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">1,200.00</span>
@@ -132,7 +132,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-2.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/2/M2-7.jpg" alt="Mens Watch">
-      <h4>Titan</h4>
+      <h4>TITAN Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">1,500.00</span>
@@ -145,7 +145,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-3.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/3/M3-4.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>BAISHENG Gold – Stainless Steel(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,500.00</span>
@@ -158,7 +158,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-19.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/19/M19-4.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>Baisheng Silver – Stainless Steel(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,500.00</span>
@@ -171,7 +171,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-4.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/4/M4-18.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>BAISHENG Square Shaped Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">3,000.00</span>
@@ -184,7 +184,7 @@
   <a href="src/main/resources/pages/leadz/watches/women/Women-1.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Womens  Watch">
-      <h4>HERYI</h4>
+      <h4>HERYI Ladies Watch (Free Box)</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">3,500.00</span>
@@ -197,7 +197,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-5.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/5/M5-2.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>Baisheng Silver-Gold-Black(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,750.00</span>
@@ -210,7 +210,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-6.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/6/M6-4.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>BAISHENG Unisex Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,500.00</span>
@@ -223,7 +223,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-7.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/7/M7-4.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>BAISHENG Silver Watch(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,200.00</span>
@@ -236,7 +236,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-8.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/8/M8-2.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>Stylish BAISHENG Mens Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,800.00</span>
@@ -249,7 +249,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-9.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/9/M9-1.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>Elegant BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,500.00</span>
@@ -262,7 +262,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-10.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/10/M10-4.jpg" alt="Mens Watch">
-      <h4>BAISHENG</h4>
+      <h4>BAISHENG Silver-Green Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,200.00</span>
@@ -275,7 +275,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-11.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/11/M11-4.jpg" alt="Mens Watch">
-      <h4>CASIO</h4>
+      <h4>CASIO Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">1,500.00</span>
@@ -288,7 +288,7 @@
   <a href="src/main/resources/pages/leadz/watches/women/Women-2.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/women/2/W2-2.jpg" alt="Womens Watch">
-      <h4>BAISHENG</h4>
+      <h4>BAISHENG Silver – Women’s Edition</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">1,500.00</span>
@@ -301,7 +301,7 @@
   <a href="src/main/resources/pages/leadz/watches/women/Women-3.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/women/3/W3-2.jpg" alt="Womens Watch">
-      <h4>HERYI</h4>
+      <h4>HERYI Ladies Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,500.00</span>
@@ -314,7 +314,7 @@
   <a href="src/main/resources/pages/leadz/watches/bundle/Bundle-1.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/bundle/1/B1-4.jpg" alt="Bundle">
-      <h4>QUARTZ</h4>
+      <h4>QUARTZ Ladies Bundle Box Set</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,000.00</span>
@@ -327,7 +327,7 @@
   <a href="src/main/resources/pages/leadz/watches/women/Women-4.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/women/4/W4-5.jpg" alt="Womens Watch">
-      <h4>LOUIS CLARKE</h4>
+      <h4>LOUIS CLARKE Ladies Watch with 6 Roses</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,500.00</span>
