--- a/src/main/resources/pages/leadz/watches/bundle/Bundle-1.html
+++ b/src/main/resources/pages/leadz/watches/bundle/Bundle-1.html
@@ -43,7 +43,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">QUARTZ</h1>
+        <h1 class="title">QUARTZ Ladies Bundle Box Set</h1>
 
         <div class="price-section">
             <div id="price">LKR 1,200.00</div>
@@ -51,7 +51,7 @@
         </div>
 
         <p class="description">
-            QUARTZ
+            A complete gift of elegance. The HERYI Ladies Bundle Box Set includes a beautifully designed watch, matching earrings, a stylish bracelet, and a delicate necklace — all packed in a premium gift box. Perfect for gifting or treating yourself to a full look of coordinated charm.
         </p>
 
         <div class="brand-label">Brand: QUARTZ</div>
