--- a/src/main/resources/pages/leadz/watches/men/Men-1.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-1.html
@@ -42,7 +42,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">CAITES</h1>
+        <h1 class="title">CAITES Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 1,200.00</div>
@@ -50,7 +50,7 @@
         </div>
 
         <p class="description">
-            CAITES
+            Redefining elegance with every tick. The CAITES Watch blends modern minimalism with classic sophistication, designed for those who value both precision and presence. Crafted for your every moment.
         </p>
 
         <div class="brand-label">Brand: CAITES</div>
