--- a/src/main/resources/pages/leadz/watches/men/Men-10.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-10.html
@@ -44,7 +44,7 @@
 
   <!-- Product Details -->
   <div class="details">
-    <h1 class="title">BAISHENG</h1>
+    <h1 class="title">BAISHENG Silver-Green Watch</h1>
 
     <div class="price-section">
       <div id="price">LKR 2,200.00</div>
@@ -52,7 +52,7 @@
     </div>
 
     <p class="description">
-      BAISHENG
+      A refreshing twist on classic style, the Baisheng Silver-Green watch features a sleek silver finish paired with a vibrant green dial. Its bold yet elegant color combo makes it a standout piece for everyday wear or special occasions. Stainless Steal
     </p>
 
     <div class="brand-label">Brand: BAISHENG</div>
