--- a/src/main/resources/pages/leadz/watches/men/Men-11.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-11.html
@@ -43,7 +43,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">CASIO</h1>
+        <h1 class="title">CASIO Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 1,500.00</div>
@@ -51,7 +51,7 @@
         </div>
 
         <p class="description">
-            CASIO
+            Reliable, functional, and built to last — the Casio Watch is known for its practical design and everyday performance. Whether for work or casual wear, it delivers timeless quality with a modern touch.
         </p>
 
         <div class="brand-label">Brand: CASIO</div>
