--- a/src/main/resources/pages/leadz/watches/men/Men-19.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-19.html
@@ -44,7 +44,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">BAISHENG Silver – Stainless Steel (Date Indicator)</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,500.00</div>
@@ -52,7 +52,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            A sleek silver timepiece that blends modern simplicity with everyday function. The Baisheng Silver features a clean stainless steel design and a built-in date indicator, offering both style and practicality in one elegant package.
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
