--- a/src/main/resources/pages/leadz/watches/men/Men-2.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-2.html
@@ -54,7 +54,7 @@
         </div>
 
         <p class="description">
-            CAITES
+            A sleek and stylish timepiece designed for everyday wear. The Titan Watch features a modern design with a clear dial and smooth finish, making it perfect for both casual and formal looks. Simple, elegant, and built to impress.
         </p>
 
         <div class="brand-label">Brand: TITAN</div>
