--- a/src/main/resources/pages/leadz/watches/men/Men-3.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-3.html
@@ -44,7 +44,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">BAISHENG Gold – Stainless Steel Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,500.00</div>
@@ -52,7 +52,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            A sophisticated gold-tone stainless steel watch designed for those who appreciate style and functionality. Featuring a clear date indicator, the BAISHENG Gold combines timeless elegance with everyday convenience.
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
