--- a/src/main/resources/pages/leadz/watches/men/Men-4.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-4.html
@@ -53,7 +53,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">BAISHENG Square Shaped Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 3,000.00</div>
@@ -61,7 +61,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            A modern take on classic design, the BAISHENG Square Shaped watch offers a distinctive look with its sharp, square dial. Its minimalist style and sleek profile make it a perfect accessory for both casual and formal occasions. Stainless Steal
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
