--- a/src/main/resources/pages/leadz/watches/men/Men-5.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-5.html
@@ -44,7 +44,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">Baisheng Silver-Gold-Black(With Date Indicator)</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,750.00</div>
@@ -52,7 +52,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            A striking blend of silver, gold, and black tones, this Baisheng watch creates a unique and sophisticated look. The contrasting colors highlight the watch’s sleek design, making it a versatile accessory that stands out with elegance and style.
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
