--- a/src/main/resources/pages/leadz/watches/men/Men-6.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-6.html
@@ -42,7 +42,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">BAISHENG Unisex Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,500.00</div>
@@ -50,7 +50,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            Designed to suit every style, the BAISHENG Unisex Watch features a clean, versatile design that looks great on anyone. Perfect for everyday wear, it blends functionality with timeless appeal.
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
