--- a/src/main/resources/pages/leadz/watches/men/Men-7.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-7.html
@@ -43,7 +43,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">BAISHENG Silver Watch(With Date Indicator)</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,200.00</div>
@@ -51,7 +51,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            The BAISHENG Watch offers a perfect balance of style and practicality. With a timeless design and reliable performance, it’s an ideal choice for those who appreciate classic elegance every day. Stainless Steal
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
