--- a/src/main/resources/pages/leadz/watches/men/Men-8.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-8.html
@@ -26,7 +26,6 @@
         <img src="../../../../assets/leadz/watches/men/8/M8-2.jpg" alt="Watch 8" class="active" />
         <img src="../../../../assets/leadz/watches/men/8/M8-3.jpg" alt="Watch 8" />
         <img src="../../../../assets/leadz/watches/men/8/M8-1.jpg" alt="Watch 8" />
-
         <img src="../../../../assets/leadz/watches/men/8/M8-4.jpg" alt="Watch 8" />
         <img src="../../../../assets/leadz/watches/Baisheng/Baisheng-Label.jpg" alt="Watch 8" />
     </div>
@@ -43,7 +42,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">Stylish BAISHENG Mens Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,800.00</div>
@@ -51,7 +50,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            A stylish and reliable watch that combines sleek design with everyday comfort. The Nice BAISHENG is perfect for those who want a subtle yet sophisticated accessory to complete their look. Stainless Steal
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
