--- a/src/main/resources/pages/leadz/watches/men/Men-9.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-9.html
@@ -43,7 +43,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">Elegant BAISHENG Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,500.00</div>
@@ -51,7 +51,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            Timeless beauty meets refined design. The Elegant BAISHENG is crafted for those who appreciate subtle luxury, featuring a sleek finish and graceful detailing that make it perfect for any occasion. Stainless Steal
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
