--- a/src/main/resources/pages/leadz/watches/women/Women-1.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-1.html
@@ -42,7 +42,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">HERYI</h1>
+        <h1 class="title">HERYI Ladies Watch (Free Box)</h1>
 
         <div class="price-section">
             <div id="price">LKR 3,500.00</div>
@@ -50,7 +50,7 @@
         </div>
 
         <p class="description">
-            HERYI
+            Elegant and feminine, the HERYI Ladies Watch is designed to complement every outfit. Each watch comes with a free stylish gift box, making it ready to present as the perfect gift or a special treat for yourself.
         </p>
 
         <div class="brand-label">Brand: HERYI</div>
