--- a/src/main/resources/pages/leadz/watches/women/Women-2.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-2.html
@@ -42,7 +42,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">BAISHENG</h1>
+        <h1 class="title">BAISHENG Silver – Women’s Edition</h1>
 
         <div class="price-section">
             <div id="price">LKR 1,500.00</div>
@@ -50,7 +50,7 @@
         </div>
 
         <p class="description">
-            BAISHENG
+            Elegant and graceful, the Baisheng Silver is designed to complement the modern woman. With its sleek silver finish and minimalist charm, it's the perfect accessory for both everyday elegance and special occasions.
         </p>
 
         <div class="brand-label">Brand: BAISHENG</div>
