--- a/src/main/resources/pages/leadz/watches/women/Women-3.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-3.html
@@ -42,7 +42,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">HERYI</h1>
+        <h1 class="title">HERYI Ladies Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,500.00</div>
@@ -50,7 +50,7 @@
         </div>
 
         <p class="description">
-            HERYI
+            Chic, classy, and crafted for elegance — the HERYI Ladies Watch features a refined design that adds a touch of sophistication to any outfit. A perfect blend of style and simplicity, made for everyday grace.
         </p>
 
         <div class="brand-label">Brand: HERYI</div>
