--- a/src/main/resources/pages/leadz/watches/women/Women-4.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-4.html
@@ -47,7 +47,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">LOUIS CLARKE</h1>
+        <h1 class="title">LOUIS CLARKE Ladies Watch with 6 Roses</h1>
 
         <div class="price-section">
             <div id="price">LKR 2,500.00</div>
@@ -55,7 +55,7 @@
         </div>
 
         <p class="description">
-            LOUIS CLARKE
+            Inspired by beauty and romance, the LOUIS CLARKE Ladies Watch – 6 Roses Edition features a graceful design paired with six delicate rose accents. A perfect blend of floral elegance and timeless charm, ideal for special moments or everyday sophistication.
         </p>
 
         <div class="brand-label">Brand: LOUIS CLARKE</div>
