--- a/src/main/resources/pages/brands.html
+++ b/src/main/resources/pages/brands.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BUNDLES | Dionz</title>
+  <title>BRANDS | Dionz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="../../resources/css/dashboard.css" />
@@ -27,20 +27,31 @@
 </a>
 
 <!-- Title -->
-<h2>Bundles</h2>
+<h2>BRANDS</h2>
 
 <!-- Products Grid -->
 <div class="products-grid">
-  <!--BUNDLE 1-->
+  <!--BAISHENG-->
   <a href="leadz/watches/bundle/Bundle-1.html?id=1" class="card-link">
     <div class="card">
       <img src="../assets/leadz/watches/bundle/1/B1-4.jpg" alt="Bundle">
-      <h4>QUARTZ Ladies Bundle Box Set</h4>
-      <div class="price">
-        <span class="currency">LKR</span>
-        <span class="current">2,000.00</span>
-        <span class="original">4,200.00</span>
-      </div>
+      <h4>BAISHENG</h4>
+    </div>
+  </a>
+
+  <!--NAVIFORCE-->
+  <a href="leadz/watches/bundle/Bundle-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/bundle/1/B1-4.jpg" alt="Bundle">
+      <h4>NAVIFORCE</h4>
+    </div>
+  </a>
+
+  <!--HERYI-->
+  <a href="leadz/watches/bundle/Bundle-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/bundle/1/B1-4.jpg" alt="Bundle">
+      <h4>HERYI</h4>
     </div>
   </a>
 </div>
