--- a/src/main/resources/pages/men.html
+++ b/src/main/resources/pages/men.html
@@ -18,8 +18,6 @@
             min-height: 100vh;
         }
 
-
-
     </style>
 
 </head>
@@ -35,54 +33,158 @@
 <!-- Products Grid -->
 <div class="products-grid">
 
-    <!--WATCH 1-->
-    <a href="temu/watches/Watch-1.html?id=1" class="card-link">
+    <!--MEN 1-->
+    <a href="leadz/watches/men/Men-1.html?id=1" class="card-link">
         <div class="card">
-            <img src="../assets/temu/watches/1/watch 1 - 1.webp" alt="Watch">
-            <h4>Binbond Casual Blue Skeleton Quartz Watch - Youthful Style</h4>
+            <img src="../assets/leadz/watches/men/1/M1-5.jpg" alt="Mens Watch">
+            <h4>CAITES Watch</h4>
             <div class="price">
                 <span class="currency">LKR</span>
-                <span class="current">4,500.00</span>
-                <span class="original">5,169.28</span>
+                <span class="current">1,200.00</span>
+                <span class="original">2,350.00</span>
             </div>
         </div>
     </a>
 
-    <!--WATCH 2-->
-    <a href="temu/watches/Watch-2.html?id=2" class="card-link">
+    <!--MEN 2-->
+    <a href="leadz/watches/men/Men-2.html?id=1" class="card-link">
         <div class="card">
-            <img src="../assets/temu/watches/2/watch 2 - 1.webp" alt="Women's Classic Watch">
-            <h4>Trendy And Elegant Quartz Wristwatch</h4>
+            <img src="../assets/leadz/watches/men/2/M2-7.jpg" alt="Mens Watch">
+            <h4>TITAN Watch</h4>
             <div class="price">
                 <span class="currency">LKR</span>
-                <span class="current">1,499.00</span>
-                <span class="original">2,391.37</span>
+                <span class="current">1,500.00</span>
+                <span class="original">2,500.00</span>
             </div>
         </div>
     </a>
 
     <!--MEN 3-->
-    <a href="temu/watches/Watch-5.html?id=7" class="card-link">
+    <a href="leadz/watches/men/Men-3.html?id=1" class="card-link">
         <div class="card">
-            <img src="../assets/temu/watches/5/watch 5 - 1.webp" alt="Women's Classic Watch">
-            <h4>CURREN Businessmen's Watch</h4>
+            <img src="../assets/leadz/watches/men/3/M3-4.jpg" alt="Mens Watch">
+            <h4>BAISHENG Gold – Stainless Steel(With Date Indicator)</h4>
             <div class="price">
                 <span class="currency">LKR</span>
-                <span class="current">9,200.00</span>
-                <span class="original">12,550.50</span>
+                <span class="current">2,500.00</span>
+                <span class="original">3,350.00</span>
+            </div>
+        </div>
+    </a>
+
+    <!--MEN 19-->
+    <a href="leadz/watches/men/Men-19.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../assets/leadz/watches/men/19/M19-4.jpg" alt="Mens Watch">
+            <h4>Baisheng Silver – Stainless Steel(With Date Indicator)</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">2,500.00</span>
+                <span class="original">3,350.00</span>
             </div>
         </div>
     </a>
 
     <!--MEN 4-->
-    <a href="temu/watches/Watch-6.html?id=8" class="card-link">
+    <a href="leadz/watches/men/Men-4.html?id=1" class="card-link">
         <div class="card">
-            <img src="../assets/temu/watches/6/watch 6 - 1.webp" alt="Men's Classic Watch">
-            <h4>Business Sports Men's Quartz Wrist Watch</h4>
+            <img src="../assets/leadz/watches/men/4/M4-18.jpg" alt="Mens Watch">
+            <h4>BAISHENG Square Shaped Watch</h4>
             <div class="price">
                 <span class="currency">LKR</span>
-                <span class="current">1,200.00</span>
-                <span class="original">2,500.50</span>
+                <span class="current">3,000.00</span>
+                <span class="original">3,750.00</span>
+            </div>
+        </div>
+    </a>
+
+    <!--MEN 5-->
+    <a href="leadz/watches/men/Men-5.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../assets/leadz/watches/men/5/M5-2.jpg" alt="Mens Watch">
+            <h4>Baisheng Silver-Gold-Black(With Date Indicator)</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">2,750.00</span>
+                <span class="original">3,500.00</span>
+            </div>
+        </div>
+    </a>
+
+    <!--MEN 6-->
+    <a href="leadz/watches/men/Men-6.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../assets/leadz/watches/men/6/M6-4.jpg" alt="Mens Watch">
+            <h4>BAISHENG Unisex Watch</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">2,500.00</span>
+                <span class="original">3,500.00</span>
+            </div>
+        </div>
+    </a>
+
+    <!--MEN 7-->
+    <a href="leadz/watches/men/Men-7.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../assets/leadz/watches/men/7/M7-4.jpg" alt="Mens Watch">
+            <h4>BAISHENG Silver Watch(With Date Indicator)</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">2,200.00</span>
+                <span class="original">3,300.00</span>
+            </div>
+        </div>
+    </a>
+
+    <!--MEN 8-->
+    <a href="leadz/watches/men/Men-8.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../assets/leadz/watches/men/8/M8-2.jpg" alt="Mens Watch">
+            <h4>Stylish BAISHENG Mens Watch</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">2,800.00</span>
+                <span class="original">3,850.00</span>
+            </div>
+        </div>
+    </a>
+
+    <!--MEN 9-->
+    <a href="leadz/watches/men/Men-9.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../assets/leadz/watches/men/9/M9-1.jpg" alt="Mens Watch">
+            <h4>Elegant BAISHENG</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">2,500.00</span>
+                <span class="original">3,850.00</span>
+            </div>
+        </div>
+    </a>
+
+    <!--MEN 10-->
+    <a href="leadz/watches/men/Men-10.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../assets/leadz/watches/men/10/M10-4.jpg" alt="Mens Watch">
+            <h4>BAISHENG Silver-Green Watch</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">2,200.00</span>
+                <span class="original">3,500.00</span>
+            </div>
+        </div>
+    </a>
+
+    <!--MEN 11-->
+    <a href="leadz/watches/men/Men-11.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../assets/leadz/watches/men/11/M11-4.jpg" alt="Mens Watch">
+            <h4>CASIO Watch</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">1,500.00</span>
+                <span class="original">2,500.00</span>
             </div>
         </div>
     </a>
