--- a/src/main/resources/pages/women.html
+++ b/src/main/resources/pages/women.html
@@ -33,30 +33,83 @@
 <div class="products-grid">
 
   <!--WOMEN 1-->
-  <a href="temu/watches/Watch-3.html?id=4" class="card-link">
+  <a href="leadz/watches/women/Women-1.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/temu/watches/3/watch 3 - 1.webp" alt="Women's Classic Watch">
-      <h4>Elegant Ladies Quartz Watch</h4>
+      <img src="../assets/leadz/watches/1/watch 1 - 1.webp" alt="Womens  Watch">
+      <h4>HERYI Ladies Watch (Free Box)</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,499.00</span>
-        <span class="original">2,100.55</span>
+        <span class="current">3,500.00</span>
+        <span class="original">4,600.00</span>
       </div>
     </div>
   </a>
 
   <!--WOMEN 2-->
-  <a href="temu/watches/Watch-4.html?id=7" class="card-link">
+  <a href="leadz/watches/women/Women-2.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/temu/watches/4/watch 4 - 8.webp" alt="Women's Classic Watch">
-      <h4>CURREN Ladies' Watch</h4>
+      <img src="../assets/leadz/watches/women/2/W2-2.jpg" alt="Womens Watch">
+      <h4>BAISHENG Silver – Women’s Edition</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">7,000.00</span>
-        <span class="original">10,130.57</span>
+        <span class="current">1,500.00</span>
+        <span class="original">2,500.00</span>
       </div>
     </div>
   </a>
+
+  <!--WOMEN 3-->
+  <a href="leadz/watches/women/Women-3.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/women/3/W3-2.jpg" alt="Womens Watch">
+      <h4>HERYI Ladies Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">2,500.00</span>
+        <span class="original">4,300.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--BUNDLE 1-->
+  <a href="leadz/watches/bundle/Bundle-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/bundle/1/B1-4.jpg" alt="Bundle">
+      <h4>QUARTZ Ladies Bundle Box Set</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">2,000.00</span>
+        <span class="original">4,200.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--WOMEN 4-->
+  <a href="leadz/watches/women/Women-4.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/women/4/W4-5.jpg" alt="Womens Watch">
+      <h4>LOUIS CLARKE Ladies Watch with 6 Roses</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">2,500.00</span>
+        <span class="original">4,000.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--MEN 6-->
+  <a href="leadz/watches/men/Men-6.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/men/6/M6-4.jpg" alt="Mens Watch">
+      <h4>BAISHENG Unisex Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">2,500.00</span>
+        <span class="original">3,500.00</span>
+      </div>
+    </div>
+  </a>
+
 
 </div>
 
